#1ベースの作成

--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
 <!--TOPページ-->
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>あずなすの開発ラボ</title>
+    </head>
+    <body>
+        <h1>あずなすの開発ラボ</h1>
+        <nav>
+            <ul>
+                <li>TOP</li>
+                <li>自己紹介
+                    <ul>
+                        <li>自己紹介TOP</li>
+                        <li>資格・スキル</li>
+                    </ul>
+                </li>
+                <li>ミニコラム</li>
+                <li>お問い合わせ</li>
+            </ul>
+        </nav>
+        <footer>
+            &copy;2021 All Rights Reserved.
+        </footer>
+    </body>
+</html>
