--- a/index.html
+++ b/index.html
@@ -1,4 +1,43 @@
 <!--TOPページ-->
+
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>あずなすの開発ラボ</title>
+    </head>
+    <body>
+        <h1>あずなすの開発ラボ</h1>
+        <nav>
+            <ul>
+                <li>TOP</li>
+                <li>自己紹介
+                    <ul>
+                        <li>自己紹介TOP</li>
+                        <li>資格・スキル</li>
+                    </ul>
+                </li>
+                <li>ミニコラム</li>
+                <li>お問い合わせ</li>
+            </ul>
+        </nav>
+        <h2>新着情報</h2>
+        <ul>
+            <li>2021.03.01 ポートフォリオサイト作成</li>
+        </ul>
+        <h2>大切にしている3箇条</h2>
+        <ul>
+            <li>○素直さ</li>
+            <li>○行動力</li>
+            <li>○好奇心</li>
+        </ul>
+        <footer>
+            &copy;2021 All Rights Reserved.
+        </footer>
+    </body>
+</html>
+
+<!--ベース
 <!DOCTYPE html>
 <html>
     <head>
@@ -25,3 +64,4 @@
         </footer>
     </body>
 </html>
+-->
