--- a/index.html
+++ b/index.html
@@ -27,9 +27,15 @@
         </ul>
         <h2>大切にしている3箇条</h2>
         <ul>
-            <li>○素直さ</li>
-            <li>○行動力</li>
-            <li>○好奇心</li>
+            <li>○素直さ
+                 <p>学ぶ姿勢！</p>
+            </li>
+            <li>○行動力
+                <p>何かアクションをおこしてみる！</p>
+            </li>
+            <li>○挑戦する心
+                <p>さまざまなことに興味を持つ。TRY & ERRORの精神を忘れない。粘り強く立ち向かう。</p>
+            </li>
         </ul>
         <footer>
             &copy;2021 All Rights Reserved.
