--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="style.css">
         <title>あずなすの開発ラボ</title>
     </head>
     <body>
@@ -13,8 +14,8 @@
                 <li>TOP</li>
                 <li>自己紹介
                     <ul>
-                        <li>自己紹介TOP</li>
-                        <li>資格・スキル</li>
+                        <li>(自己紹介の下)自己紹介TOP</li>
+                        <li>(自己紹介の下)資格・スキル</li>
                     </ul>
                 </li>
                 <li>ミニコラム</li>
