ナビゲーションの配置調整

--- a/index.html
+++ b/index.html
@@ -8,20 +8,18 @@
         <title>あずなすの開発ラボ</title>
     </head>
     <body>
-        <h1>あずなすの開発ラボ</h1>
-        <nav>
-            <ul>
-                <li>TOP</li>
-                <li>自己紹介
-                    <ul>
-                        <li>(自己紹介の下)自己紹介TOP</li>
-                        <li>(自己紹介の下)資格・スキル</li>
-                    </ul>
-                </li>
-                <li>ミニコラム</li>
-                <li>お問い合わせ</li>
-            </ul>
-        </nav>
+        <div class="top">
+            <h1><a href="index.html">あずなすの開発ラボ</a></h1>
+            <nav>
+                <ul class="navi">
+                    <li><a href="index.html">TOP</a> | </li>
+                    <li><a href="introductionTop.html">自己紹介</a> | </li>
+                    <li><a>ミニコラム</a> | </li>
+                    <li><a>お問い合わせ</a> | </li>
+                </ul>
+            </nav>
+        </div>
+
         <h2>新着情報</h2>
         <ul>
             <li>2021.03.01 ポートフォリオサイト作成</li>
