一旦、お問い合わせページをGoogle Formで用意。

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                     <li><a href="index.html">TOP</a> | </li>
                     <li><a href="introductionTop.html">自己紹介</a> | </li>
                     <li><a>ミニコラム</a> | </li>
-                    <li><a>お問い合わせ</a> | </li>
+                    <li><a href="contacts.html">お問い合わせ</a></li>
                 </ul>
             </nav>
         </div>
