テンプレートの適用と、自己紹介TOPの原稿流し込み

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <ul class="navi">
                     <li><a href="index.html">TOP</a> | </li>
                     <li><a href="introductionTop.html">自己紹介</a> | </li>
-                    <li><a>ミニコラム</a> | </li>
+                    <li><a href="./column/2103.html">ミニコラム</a> | </li>
                     <li><a href="contacts.html">お問い合わせ</a></li>
                 </ul>
             </nav>
@@ -26,13 +26,13 @@
         </ul>
         <h2>大切にしている3箇条</h2>
         <ul>
-            <li>○素直さ
+            <li>素直さ
                  <p>学ぶ姿勢！</p>
             </li>
-            <li>○行動力
+            <li>行動力
                 <p>何かアクションをおこしてみる！</p>
             </li>
-            <li>○挑戦する心
+            <li>挑戦する心
                 <p>さまざまなことに興味を持つ。TRY & ERRORの精神を忘れない。粘り強く立ち向かう。</p>
             </li>
         </ul>
