--- a/introductionTop.html
+++ b/introductionTop.html
@@ -2,28 +2,45 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="style.css">
         <title>あずなすの開発ラボ</title>
     </head>
     <body>
-        <h1>あずなすの開発ラボ</h1>
-        <nav>
-            <ul>
-                <li>TOP</li>
-                <li>自己紹介
-                    <ul>
-                        <li>自己紹介TOP</li>
-                        <li>資格・スキル</li>
-                    </ul>
-                </li>
-                <li>ミニコラム</li>
-                <li>お問い合わせ</li>
-            </ul>
-        </nav>
+        <div class="top">
+            <h1><a href="index.html">あずなすの開発ラボ</a></h1>
+            <nav>
+                <ul class="navi">
+                    <li><a href="index.html">TOP</a> | </li>
+                    <li><a href="introductionTop.html">自己紹介</a> | </li>
+                    <li><a href="./column/2103.html">ミニコラム</a> | </li>
+                    <li><a href="contacts.html">お問い合わせ</a></li>
+                </ul>
+            </nav>
+        </div>
+
         <h2>自己紹介</h2>
-        初めまして。あずなすです。<br>
-        1998年2月10日生まれ。<br>
-        <!--ポートレート画像-->
-        <!--SNSリンク-->
+        <h3>基本情報</h3>
+        <p>
+            <span>名前：</span>岡本梓沙<br>
+            <span>生年月日：</span>1998年2月10日
+        </p>
+        
+        <h3>経歴</h3>
+        <p>
+            高校では、国際科で英語を中心に学び、大学では商学部で学習。<br>
+            卒業後の現在は、プログラミングの勉強をしながらエンジニア見習い(いわゆる駆け出しエンジニア)としてアルバイト。
+        </p>
+
+        <h4>経歴1問1答</h4>
+        <p>
+            Q.高校から大学、現在へと学んできたものがそれぞれ違いますね？<br>
+            A.全くそれぞれ違う学習のように見えるのですが、実際繋がっている部分もあるんです！高校と大学は特に。<br>
+            英語、特に英会話がもともと好きで、高校は国際科のある高校を選択。その高校時代に経験した海外研修で、海外の食品に興味を持ち、将来は商社で働きたいと思い、英語の学習ばかりではなく、世界の経済にも目を向け、学習しておく必要があると考え、大学では商学部を選択しました。
+        </p>
+        <p>
+            Q.じゃあ、現在、エンジニアを目指しているのは...？<br>
+            A.長くなるので、プログラミングとの出会いのページを見てみてください！[「プログラミングとの出会い」ページとリンク付け]
+        </p>
         <footer>
             &copy;2021 All Rights Reserved.
         </footer>
