ヘッダーとフッターをJavaScriptを使ってテンプレート化

--- a/contacts.html
+++ b/contacts.html
@@ -6,21 +6,9 @@
         <title>あずなすの開発ラボ</title>
     </head>
     <body>
-        <div class="top">
-            <h1><a href="index.html">あずなすの開発ラボ</a></h1>
-            <nav>
-                <ul class="navi">
-                    <li><a href="index.html">TOP</a> | </li>
-                    <li><a href="introductionTop.html">自己紹介</a> | </li>
-                    <li><a>ミニコラム</a> | </li>
-                    <li><a>お問い合わせ</a></li>
-                </ul>
-            </nav>
-        </div>
+        <script src="header.js"></script>
         <h2>お問い合わせ</h2>
         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf6M946ITNb5KYGu-XBSNUONi-oCYiilc83RLDRXYuD_qAx8g/viewform?embedded=true" width="640" height="641" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-        <footer>
-            &copy;2021 All Rights Reserved.
-        </footer>
+        <script src="footer.js"></script>
     </body>
 </html>
