--- a/introductionTop.html
+++ b/introductionTop.html
@@ -6,17 +6,7 @@
         <title>あずなすの開発ラボ</title>
     </head>
     <body>
-        <div class="top">
-            <h1><a href="index.html">あずなすの開発ラボ</a></h1>
-            <nav>
-                <ul class="navi">
-                    <li><a href="index.html">TOP</a> | </li>
-                    <li><a href="introductionTop.html">自己紹介</a> | </li>
-                    <li><a href="./column/2103.html">ミニコラム</a> | </li>
-                    <li><a href="contacts.html">お問い合わせ</a></li>
-                </ul>
-            </nav>
-        </div>
+        <script src="header.js"></script>
 
         <h2>自己紹介</h2>
         <h3>基本情報</h3>
@@ -41,8 +31,6 @@
             Q.じゃあ、現在、エンジニアを目指しているのは...？<br>
             A.長くなるので、プログラミングとの出会いのページを見てみてください！[「プログラミングとの出会い」ページとリンク付け]
         </p>
-        <footer>
-            &copy;2021 All Rights Reserved.
-        </footer>
+        <script src="footer.js"></script>
     </body>
 </html>
