--- a/skills.html
+++ b/skills.html
@@ -6,21 +6,8 @@
         <title>あずなすの開発ラボ</title>
     </head>
     <body>
-        <div class="top">
-            <h1><a href="index.html">あずなすの開発ラボ</a></h1>
-            <nav>
-                <ul class="navi">
-                    <li><a href="index.html">TOP</a> | </li>
-                    <li><a href="introductionTop.html">自己紹介</a> | </li>
-                    <li><a>ミニコラム</a> | </li>
-                    <li><a href="contacts.html">お問い合わせ</a></li>
-                </ul>
-            </nav>
-        </div>
-
+        <script src="header.js"></script>
         
-        <footer>
-            &copy;2021 All Rights Reserved.
-        </footer>
+        <script src="footer.js"></script>
     </body>
 </html>
