自己紹介ページの作成とプロダクトページの作成

--- a/introductionTop.html
+++ b/introductionTop.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="style.css">
+        <script src="https://kit.fontawesome.com/aeef7d63d2.js" crossorigin="anonymous"></script>
         <title>あずなすの開発ラボ</title>
     </head>
     <body>
@@ -14,23 +15,40 @@
             <span>名前：</span>岡本梓沙<br>
             <span>生年月日：</span>1998年2月10日
         </p>
+
+        <h3>SNS</h3>
+        <div class="icon">
+            <a href="https://twitter.com/azu_proglove">
+                <i class="fab fa-twitter-square fa-4x"></i>
+            </a>
+            <a href="https://www.facebook.com/profile.php?id=100006217548803">
+                <i class="fab fa-facebook-square fa-4x"></i>
+            </a>
+        </div>
         
         <h3>経歴</h3>
         <p>
             高校では、国際科で英語を中心に学び、大学では商学部で学習。<br>
-            卒業後の現在は、プログラミングの勉強をしながらエンジニア見習い(いわゆる駆け出しエンジニア)としてアルバイト。
+            卒業後の現在は、プログラミングの勉強をしながらエンジニアとしてアルバイト。<br>
+            個人開発では、主に、JavaScriptを使っていて、Vue.jsやReact.jsを使ってWebアプリケーションを制作している。
         </p>
 
-        <h4>経歴1問1答</h4>
-        <p>
-            Q.高校から大学、現在へと学んできたものがそれぞれ違いますね？<br>
-            A.全くそれぞれ違う学習のように見えるのですが、実際繋がっている部分もあるんです！高校と大学は特に。<br>
-            英語、特に英会話がもともと好きで、高校は国際科のある高校を選択。その高校時代に経験した海外研修で、海外の食品に興味を持ち、将来は商社で働きたいと思い、英語の学習ばかりではなく、世界の経済にも目を向け、学習しておく必要があると考え、大学では商学部を選択しました。
-        </p>
-        <p>
-            Q.じゃあ、現在、エンジニアを目指しているのは...？<br>
-            A.長くなるので、プログラミングとの出会いのページを見てみてください！[「プログラミングとの出会い」ページとリンク付け]
-        </p>
+        <h3>スキル</h3>
+        <h4>資格</h4>
+        <ul>
+            <li>ITパスポート</li>
+            <li>EXCEL VBA(スタンダード)</li>
+        </ul>
+        <h4>プログラミング</h4>
+        <h5>言語</h5>
+        <div class="icons">
+            <i class="fab fa-js fa-4x"></i>
+        </div>
+        <h5>フレームワーク・ライブラリ</h5>
+        <div class="icons">
+            <i class="fab fa-vuejs fa-4x"></i>
+            <i class="fab fa-react fa-4x"></i>
+        </div>
         <script src="footer.js"></script>
     </body>
 </html>
